--- a/portfolio-project/examples/templates/examples/home.html
+++ b/portfolio-project/examples/templates/examples/home.html
@@ -1,1 +1,7 @@
-Hello World!
+<h1>Some examples of things I've worked on</h1>
+
+{% for example in examples.all %}
+
+{{ example.summary }}
+
+{% endfor %}
