connecting URLS and templates in Django and creating views

--- a/portfolio-project/examples/templates/examples/home.html
+++ b/portfolio-project/examples/templates/examples/home.html
@@ -51,12 +51,12 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>[ MACE · SPACE ]</h1>
-      <p class="lead text-muted">Here are some examples of things I've worked on.</p>
+      <p class="lead text-muted">Here are some examples of things I've been working on, presented using a website built using Django and a PostgreSQL database: </p>
       <p>
         <a href="https://github.com/MJTMace/django-template" class="btn btn-primary my-2">GitHub Repo</a>
         <a href="#" class="btn btn-secondary my-2">A secondary button</a>
       </p>
-     <img src="{% static 'photo_MM.jpg' %}" height=300> </img>
+     <img src="{% static 'photo_MM.jpg' %}" height=200> </img>
     </div>
   </section>
 
