--- a/portfolio-project/examples/templates/examples/home.html
+++ b/portfolio-project/examples/templates/examples/home.html
@@ -67,6 +67,7 @@
       {% for example in examples.all %}
 
         <div class="col-md-4">
+	<a href="{% url 'detail' example.id %}">
           <div class="card mb-4 shadow-sm">
             <!--<svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> -->
 	  <img class="card-img-top" src="{{ example.image.url }}">
@@ -74,6 +75,7 @@
               <p class="card-text">{{ example.summary }}</p>
             </div>
           </div>
+	</a>
         </div>
      {% endfor %}
       </div>
