--- a/portfolio-project/examples/templates/examples/detail.html
+++ b/portfolio-project/examples/templates/examples/detail.html
@@ -51,8 +51,10 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Details</h1>
-      <p class="lead text-muted"> {{ example.summary }} </p>
-           <img src="{{ example.image.url }}" height=300> </img>
+	<img src ="{{ example.image.url }}" height=300>
+      <p class="lead text-muted"> {{ example.summarydetail }} </p>
+           <img src="{{ example.imagedetail1.url }}" height=300> </img>
+           <img src="{{ example.imagedetail2.url }}" height=300> </img>
 	<p>
         <a href="{% url 'home' %}" class="btn btn-primary my-2">Back</a>
       </p>
@@ -61,16 +63,6 @@
   </section>
 
 </main>
-
-<footer class="text-muted">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Back to top</a>
-    </p>
-    <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="/docs/4.4/getting-started/introduction/">getting started guide</a>.</p>
-  </div>
-</footer>
 
     <!-- Bootstrap core JavaScript
     ======================================= -->
