--- a/portfolio-project/examples/templates/examples/home.html
+++ b/portfolio-project/examples/templates/examples/home.html
@@ -7,13 +7,12 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>[ MACE · SPACE ]</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
-
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}">
-
+    <!-- My custom CSS -->
+    <!-- <link rel="stylesheet" href="{% static '/css/custom.css' %}">-->
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -55,8 +54,7 @@
       <p>
         <a href="https://github.com/MJTMace/django-template" class="btn btn-secondary my-2">GitHub Repo</a>
       </p>
-
-      <p class="lead text-muted">Here I demonstrate a website built using Django and PostgreSQL of some things I've been working on <br>[click on the thumbnails for further information] </br></p>
+      <p class="lead text-muted"> <br></br> Here I demonstrate an unpolished (!) website built using Django and PostgreSQL of some things I've been working on.<br>Click on thumbnails for a short description ...</br></p>
    </div>
   </section>
 
